<resources>
    <string name="app_name">Wotify</string>
    <string name="action_settings">Settings</string>
    <string name="cwock">Clockit</string>
    <string name="addAlarm">Add Alarm</string>
    <string name="setit">Set</string>
    <string name="cancelit">Cancel</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

</resources>
